--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,46 @@
 * {
   box-sizing: border-box;
 }
+body {
+  background-color: rgb(243, 243, 243);
+  padding: 64px;
+  font-family: "Inter", sans-serif;
+}
+.page-wrapper {
+  max-width: 375px;
+  margin: auto;
+  border-radius: 15px;
+  box-shadow: 0px 4px 26.4px 0px rgba(128, 128, 128, 0.25);
+}
+.header {
+  color: #fff;
+  text-align: center;
+  height: 234px;
+  padding: 51px 44px 72px;
+  box-sizing: border-box;
+  border-radius: 0px 0px 30px 30px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.15),
+      rgba(0, 0, 0, 0.6) 100%
+    ),
+    url(../img/header_bg.png) no-repeat center / cover;
+}
+.publishing {
+  font-size: 33px;
+  font-weight: 400;
+  line-height: 40px;
+  letter-spacing: 5%;
+}
+.connector {
+  font-size: 31px;
+  font-weight: 800;
+  line-height: 38px;
+}
+.printing {
+  font-size: 39px;
+  font-weight: 600;
+  line-height: 47px;
+  letter-spacing: 3%;
+}
