--- a/css/style.css
+++ b/css/style.css
@@ -3,21 +3,25 @@
 }
 body {
   background-color: rgb(243, 243, 243);
-  padding: 64px;
+  padding: 60px;
   font-family: "Inter", sans-serif;
 }
 .page-wrapper {
+  overflow: hidden;
   max-width: 375px;
   margin: auto;
   border-radius: 15px;
   box-shadow: 0px 4px 26.4px 0px rgba(128, 128, 128, 0.25);
 }
+.container {
+  max-width: 338px;
+  margin: auto;
+}
 .header {
   color: #fff;
   text-align: center;
   height: 234px;
-  padding: 51px 44px 72px;
-  box-sizing: border-box;
+  padding: 51px 44px;
   border-radius: 0px 0px 30px 30px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   background: linear-gradient(
@@ -27,20 +31,37 @@ body {
     ),
     url(../img/header_bg.png) no-repeat center / cover;
 }
+.business {
+  margin: 0;
+}
 .publishing {
   font-size: 33px;
   font-weight: 400;
-  line-height: 40px;
-  letter-spacing: 5%;
 }
 .connector {
   font-size: 31px;
   font-weight: 800;
-  line-height: 38px;
 }
 .printing {
   font-size: 39px;
   font-weight: 600;
-  line-height: 47px;
-  letter-spacing: 3%;
+}
+.logo-name {
+  margin-top: -59px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 6px 25px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+  background: rgb(255, 255, 255);
+}
+.logo {
+  border-radius: 50px;
+}
+.name {
+  font-size: 30px;
+  font-weight: 300;
+  letter-spacing: -3%;
+  text-align: left;
 }
