--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,31 @@ body {
   letter-spacing: -3%;
   text-align: left;
 }
+.card {
+  margin-top: 21px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+  background: rgb(255, 255, 255);
+}
+.info {
+  padding: 22px 29px 15px 29px;
+}
+.info-text {
+  display: flex;
+  align-items: start;
+  font-size: 11.5px;
+  font-weight: 300;
+}
+.info-text p {
+  margin-top: 0;
+  margin-left: 10px;
+  margin-bottom: 5px;
+}
+.slider {
+  display: flex;
+  justify-content: center;
+}
+.info-slider {
+  border-radius: 15px;
+  overflow: hidden;
+}
